# generative

./: .gitignore  Untitled.ipynb  cacti.ipynb  cell_ball.ipynb  circle_parquet.ipynb  isolines.ipynb  mesh.ipynb  pyproject.toml  quadtree.ipynb  water_ripples.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  circle_parquet-checkpoint.ipynb  pyproject-checkpoint.toml  quadtree_fractal-checkpoint.ipynb  quadtree_parquet-checkpoint.ipynb
