[tool.poetry]
name = "generative"
version = "0.1.0"
description = ""
authors = ["jpsmithnl <jp.smith@mun.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
drawSvg = "^1.9.0"
pycairo = {url = "https://download.lfd.uci.edu/pythonlibs/archived/pycairo-1.21.0-cp310-cp310-win_amd64.whl"}
weasyprint = "^57.2"
jupyterlab = "^3.6.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
