[tool.poetry]
name = "generative"
version = "0.1.0"
description = ""
authors = ["jpsmithnl <jp.smith@mun.ca>"]

[tool.poetry.dependencies]
python = "^3.10"
weasyprint = "^57.2"
jupyterlab = "^3.6.1"
jupyter = "^1.0.0"
pycairo = "^1.23.0"
drawsvg = {extras = ["all"], version = "^2.1.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
